make final changes VGG16

--- a/VGG16-BN-Corals-Image-Classification.ipynb
+++ b/VGG16-BN-Corals-Image-Classification.ipynb
@@ -628,33 +628,33 @@
    "id": "a6934103b50fc039",
    "metadata": {},
    "source": [
-    "### Comparison of four runs with adapted parameters\n",
+    "## Comparison of four runs with adapted parameters\n",
     "\n",
     "### **Plan for 4 Runs**\n",
     "\n",
-    "| **Run** | **Batch Size** | **Learning Rate (LR)** | **Augmentation**                           | **Scheduler Step Size** | **Epochs** | **Why Test These Values?**                                                                          |**Final Validation Loss** | **Final Validation Accuracy** |\n",
-    "|---------|----------------|-------------------------|-------------------------------------------|--------------------------|-------------|-----------------------------------------------------------------------------------------------------|----------------------------|-------------------------------|\n",
-    "| **1**   | 32             | 0.001                  | Resize, Normalize                         | 5                        | 30          | Baseline values to establish the model's performance.                                               |       0.867384                     | 75%                           |\n",
-    "| **2**   | 64             | 0.0001                 | Resize, Normalize, Horizontal Flip        | 10                       | 50          | Larger batch size for more stable training and longer epochs for better convergence.                |            1.480133                | 70.65%                        |\n",
-    "| **3**   | 16             | 0.0005                 | Resize, Normalize, Rotation (15°)         | 5                        | 30          | Smaller batch size for better generalization, higher LR for faster optimization.                    |                 0.683016           | 76.1%                         |\n",
-    "| **4**   | 48             | 0.0002                 | Resize, Normalize, Horizontal Flip + Rotation (10°) | 8                        | 40          | Balanced batch size and learning rate to test trade-offs between stability and faster learning.     |                  1.222641          | 72.82%                        |\n",
+    "| **Run** | **Batch Size** | **Learning Rate (LR)** | **Augmentation**                           | **Scheduler Step Size** | **Epochs**                                                           |**Final Validation Loss** | **Final Validation Accuracy** |\n",
+    "|---------|----------------|-------------------------|-------------------------------------------|--------------------------|-------------|---------------------------|-------------------------------|\n",
+    "| **1**   | 32             | 0.001                  | Resize, Normalize                         | 5                        | 30          |       0.867384                    | 75%                           |\n",
+    "| **2**   | 64             | 0.0001                 | Resize, Normalize, Horizontal Flip        | 10                       | 50          |            1.480133                | 70.65%                        |\n",
+    "| **3**   | 16             | 0.0005                 | Resize, Normalize, Rotation (15°)         | 5                        | 30          |                 0.683016           | 76.1%                         |\n",
+    "| **4**   | 48             | 0.0002                 | Resize, Normalize, Horizontal Flip + Rotation (10°) | 8                        | 40          |                  1.222641          | 72.82%                        |\n",
     "\n",
     "---\n",
     "\n",
-    "### **Why Test These Values?**\n",
+    "### **Why these values were adapted**\n",
     "\n",
     "#### **1. Batch Size**\n",
     "  - Larger batch sizes stabilize training and speed up convergence.\n",
     "  - Smaller batch sizes promote generalization and help the model escape local minima.\n",
     "- **Expectations**\n",
-    "  - Larger batch sizes (e.g., 64) might improve validation accuracy for simpler datasets.\n",
-    "  - Smaller batch sizes (e.g., 16) could generalize better for complex data or imbalanced classes.\n",
+    "  - Larger batch sizes (e.g. 64) might improve validation accuracy for simpler datasets.\n",
+    "  - Smaller batch sizes (e.g. 16) could generalize better for complex data or imbalanced classes.\n",
     "\n",
     "#### **2. Learning Rate (LR)**\n",
     "  - The learning rate determines the speed of optimization.\n",
-    "  - Smaller learning rates (e.g., `0.0001`) are more precise but slower.\n",
-    "  - Moderate learning rates (e.g., `0.001`) enable faster learning but can be unstable.\n",
-    "  - Higher learning rates (e.g., `0.0005`) help the model converge quickly but may overshoot the minimum.\n",
+    "  - Smaller learning rates (e.g. `0.0001`) are more precise but slower.\n",
+    "  - Moderate learning rates (e.g. `0.001`) enable faster learning but can be unstable.\n",
+    "  - Higher learning rates (e.g. `0.0005`) help the model converge quickly but may overshoot the minimum.\n",
     "- **Expectations**\n",
     "  - A smaller learning rate might perform better with complex models or longer training durations.\n",
     "\n",
@@ -667,8 +667,8 @@
     "\n",
     "#### **4. Scheduler Step Size**\n",
     "  - The scheduler step size controls how often the learning rate is reduced.\n",
-    "  - A shorter step size (e.g., 5) allows for earlier adjustments.\n",
-    "  - A longer step size (e.g., 10) allows more training at the original learning rate.\n",
+    "  - A shorter step size (e.g. 5) allows for earlier adjustments.\n",
+    "  - A longer step size (e.g. 10) allows more training at the original learning rate.\n",
     "- **Expectations**\n",
     "  - Shorter step sizes can help with unstable loss functions.\n",
     "  - Longer step sizes may benefit stable loss curves.\n",
@@ -676,8 +676,8 @@
     "#### **5. Epochs**\n",
     "  - More epochs give the model more time to learn but increase the risk of overfitting.\n",
     "- **Expectations**\n",
-    "  - More epochs (e.g., 50) should work well with lower learning rates and larger batch sizes.\n",
-    "  - Fewer epochs (e.g., 30) are suitable for faster optimization.\n",
+    "  - More epochs (e.g. 50) should work well with lower learning rates and larger batch sizes.\n",
+    "  - Fewer epochs (e.g. 30) are suitable for faster optimization.\n",
     "\n",
     "---\n",
     "\n",
@@ -692,15 +692,42 @@
     "\n",
     "---\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
     "### **Conclusion**\n",
     "\n",
-    "   - Identify which run achieves the best validation accuracy and lowest validation loss.\n",
-    "   - Compare training loss to validation loss to check for overfitting.\n",
-    "   - Analyze the effect of augmentations, batch size, and learning rate on performance.\n",
+    "Based on the results of the four runs:\n",
     "\n",
+    "1. **Best Validation Accuracy**:\n",
+    "   - **Run 3** achieved the highest validation accuracy at **76.1%** with a smaller batch size of 16, learning rate of `0.0005` and rotation augmentation.\n",
+    "   - This suggests that smaller batch sizes combined with moderate learning rates can improve generalization and optimize performance for this dataset.\n",
+    "\n",
+    "2. **Lowest Validation Loss**:\n",
+    "   - **Run 3** also achieved the lowest validation loss at **0.6830**, further supporting that this configuration resulted in the best overall learning and generalization.\n",
+    "\n",
+    "3. **Impact of Batch Size**:\n",
+    "   - Smaller batch sizes (Run 3) showed better generalization compared to larger batch sizes (Run 2), which resulted in the lowest validation accuracy and the highest validation loss, possibly due to less frequent weight updates.\n",
+    "\n",
+    "4. **Impact of Learning Rate**:\n",
+    "   - The smaller learning rate in Run 2 (`0.0001`) slowed convergence, while the higher learning rate in Run 3 (`0.0005`) allowed faster optimization without instability.\n",
+    "   - A too-high learning rate in Run 1 (`0.001`) may have caused unstable updates, as evidenced by its higher validation loss.\n",
+    "\n",
+    "5. **Effect of Augmentation**:\n",
+    "   - Runs with augmentations, especially **Rotation (15°)** in Run 3, resulted in improved performance, suggesting that incorporating realistic variations in the dataset enhances robustness.\n",
+    "   - However, combining multiple augmentations (Run 4) did not yield better results, possibly due to overcomplicating the learning process for this dataset.\n",
+    "\n",
+    "6. **Scheduler Step Size and Epochs**:\n",
+    "   - A shorter step size (e.g., Run 1, `5`) seemed to help refine the learning rate faster, contributing to more stable training.\n",
+    "   - More epochs (Run 2, 50 epochs) did not improve performance as expected, likely due to insufficient learning rate reduction and overfitting.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **Recommendations for the future**\n",
+    "\n",
+    "- **Best Configuration**: \n",
+    "   - Run 3 (Batch Size: 16, LR: `0.0005`, Rotation Augmentation) balances generalization and fast optimization, making it the best choice for this dataset.\n",
+    "   \n",
+    "- **Further Improvements**:\n",
+    "   - Experiment with additional augmentations for Run 3, such as **Horizontal Flip** or **Color Jitter**, to further enhance robustness of the model.\n",
+    "   - Adjust the scheduler step size for larger batch sizes to refine learning rates earlier and avoid underperformance (as seen in Run 2).\n",
     "\n"
    ]
   }
