--- a/MobileNet-Coral-Image-Classification.ipynb
+++ b/MobileNet-Coral-Image-Classification.ipynb
@@ -455,52 +455,48 @@
    "id": "d53f0613e76f2c05",
    "metadata": {},
    "source": [
-    "### **Runs and Parameters**\n",
+    "### Runs and Parameters\n",
     "\n",
-    "| **Run** | **Batch Size** | **Learning Rate (LR)** | **Augmentation**                     | **Epochs** | **Why Test These Values?**                                                                          |\n",
-    "|---------|----------------|-------------------------|---------------------------------------|-------------|-----------------------------------------------------------------------------------------------------|\n",
-    "| **1**   | 40             | 0.0001                 | Resize, Normalize                    | 10          | Baseline values using default parameters from your current implementation.                         |\n",
-    "| **2**   | 60             | 0.00005                | Resize, Normalize, Horizontal Flip   | 15          | Larger batch size and more epochs for stable training and better convergence.                       |\n",
-    "| **3**   | 20             | 0.0002                 | Resize, Normalize, Rotation (15°)    | 10          | Smaller batch size for better generalization and higher LR for faster updates.                     |\n",
-    "| **4**   | 40             | 0.0001                 | Resize, Normalize, Horizontal Flip + Color Jitter (Brightness, Contrast) | 20          | Introduces additional augmentation and extended training for robustness and potential overfitting evaluation. |\n",
+    "| **Run** | **Batch Size** | **Learning Rate (LR)** | **Augmentation**                     | **Epochs** |\n",
+    "|---------|----------------|-------------------------|---------------------------------------|-------------|\n",
+    "| **1**   | 40             | 0.0001                 | Resize, Normalize                    | 10          |\n",
+    "| **2**   | 60             | 0.00005                | Resize, Normalize, Horizontal Flip   | 15          |\n",
+    "| **3**   | 20             | 0.0002                 | Resize, Normalize, Rotation (15°)    | 10          |\n",
+    "| **4**   | 40             | 0.0001                 | Resize, Normalize, Horizontal Flip + Color Jitter (Brightness, Contrast) | 20          |\n",
     "\n",
     "---\n",
     "\n",
-    "### **Why Test These Parameters?**\n",
+    "### Why these values were adapted\n",
     "\n",
-    "#### **1. Batch Size**\n",
-    "- **Why vary?**\n",
+    "#### 1. Batch Size\n",
     "  - Larger batch sizes stabilize training but require more memory.\n",
     "  - Smaller batch sizes promote generalization and can help in imbalanced datasets.\n",
-    "- **What to expect?**\n",
+    "- **Expectations**\n",
     "  - Smaller batch sizes might show better validation accuracy.\n",
     "  - Larger batch sizes might improve convergence speed and training stability.\n",
     "\n",
-    "#### **2. Learning Rate**\n",
-    "- **Why vary?**\n",
+    "#### 2. Learning Rate\n",
     "  - The learning rate controls how much the model adjusts its weights in response to the loss.\n",
     "  - Smaller LR values ensure precise weight updates, while larger LR values speed up convergence.\n",
-    "- **What to expect?**\n",
+    "- **Expectations**\n",
     "  - A lower LR (e.g., `0.00005`) might benefit deeper or more complex models.\n",
     "  - A higher LR (e.g., `0.0002`) can help the model converge faster during early training.\n",
     "\n",
-    "#### **3. Augmentation**\n",
-    "- **Why vary?**\n",
+    "#### 3. Augmentation\n",
     "  - Augmentation increases variability in the training data, helping the model generalize better.\n",
     "  - Adding `Horizontal Flip`, `Rotation`, or `Color Jitter` can mimic real-world variations in coral images.\n",
-    "- **What to expect?**\n",
+    "- **Expectations**\n",
     "  - Augmentation should reduce overfitting and improve validation accuracy, especially for small datasets.\n",
     "\n",
-    "#### **4. Epochs**\n",
-    "- **Why vary?**\n",
+    "#### 4. Epochs\n",
     "  - More epochs allow the model to learn longer but increase the risk of overfitting.\n",
     "  - Fewer epochs might miss optimal performance.\n",
-    "- **What to expect?**\n",
+    "- **Expectations**\n",
     "  - Longer training (e.g., 20 epochs) might refine performance when combined with strong regularization (e.g., augmentation).\n",
     "\n",
     "---\n",
     "\n",
-    "### **Result Table After Each Run**\n",
+    "### Results for each run\n",
     "\n",
     "| **Run** | **Batch Size** | **Learning Rate** | **Augmentation**                | **Epochs** | **Final Train Loss** | **Final Val Loss** | **Final Val Accuracy** |\n",
     "|---------|----------------|-------------------|----------------------------------|------------|----------------------|--------------------|------------------------|\n",
