--- a/VGG16-BN-Corals-Image-Classification.ipynb
+++ b/VGG16-BN-Corals-Image-Classification.ipynb
@@ -641,16 +641,16 @@
     "\n",
     "---\n",
     "\n",
-    "### **Why these values were adapted**\n",
+    "### Why these values were adapted\n",
     "\n",
-    "#### **1. Batch Size**\n",
+    "#### 1. Batch Size\n",
     "  - Larger batch sizes stabilize training and speed up convergence.\n",
     "  - Smaller batch sizes promote generalization and help the model escape local minima.\n",
     "- **Expectations**\n",
     "  - Larger batch sizes (e.g. 64) might improve validation accuracy for simpler datasets.\n",
     "  - Smaller batch sizes (e.g. 16) could generalize better for complex data or imbalanced classes.\n",
     "\n",
-    "#### **2. Learning Rate (LR)**\n",
+    "#### 2. Learning Rate (LR)\n",
     "  - The learning rate determines the speed of optimization.\n",
     "  - Smaller learning rates (e.g. `0.0001`) are more precise but slower.\n",
     "  - Moderate learning rates (e.g. `0.001`) enable faster learning but can be unstable.\n",
@@ -658,14 +658,14 @@
     "- **Expectations**\n",
     "  - A smaller learning rate might perform better with complex models or longer training durations.\n",
     "\n",
-    "#### **3. Augmentation**\n",
+    "#### 3. Augmentation\n",
     "  - Augmentation makes the model more robust and reduces overfitting.\n",
     "  - Horizontal flips simulate symmetry in the data (e.g., coral images).\n",
     "  - Rotation helps with images where orientation varies.\n",
     "- **Expectations**\n",
     "  - Augmentation should improve validation accuracy, especially for small datasets.\n",
     "\n",
-    "#### **4. Scheduler Step Size**\n",
+    "#### 4. Scheduler Step Size\n",
     "  - The scheduler step size controls how often the learning rate is reduced.\n",
     "  - A shorter step size (e.g. 5) allows for earlier adjustments.\n",
     "  - A longer step size (e.g. 10) allows more training at the original learning rate.\n",
@@ -673,7 +673,7 @@
     "  - Shorter step sizes can help with unstable loss functions.\n",
     "  - Longer step sizes may benefit stable loss curves.\n",
     "\n",
-    "#### **5. Epochs**\n",
+    "#### 5. Epochs\n",
     "  - More epochs give the model more time to learn but increase the risk of overfitting.\n",
     "- **Expectations**\n",
     "  - More epochs (e.g. 50) should work well with lower learning rates and larger batch sizes.\n",
@@ -681,7 +681,7 @@
     "\n",
     "---\n",
     "\n",
-    "### **Metrics to Track During Runs**\n",
+    "### Metrics to Track During Runs\n",
     "\n",
     "| **Metric**            | **Description**                                                                                  | **Goal**                                                                                     |\n",
     "|------------------------|--------------------------------------------------------------------------------------------------|---------------------------------------------------------------------------------------------|\n",
@@ -692,7 +692,7 @@
     "\n",
     "---\n",
     "\n",
-    "### **Conclusion**\n",
+    "### Conclusion\n",
     "\n",
     "Based on the results of the four runs:\n",
     "\n",
@@ -720,7 +720,7 @@
     "\n",
     "---\n",
     "\n",
-    "### **Recommendations for the future**\n",
+    "### Recommendations for the future\n",
     "\n",
     "- **Best Configuration**: \n",
     "   - Run 3 (Batch Size: 16, LR: `0.0005`, Rotation Augmentation) balances generalization and fast optimization, making it the best choice for this dataset.\n",
